[project]
name = "mcp-youtube"
version = "0.1.0"
description = "YouTube transcript operations as Python library, LangChain tools, and MCP server"
requires-python = ">=3.10"
dependencies = ["youtube-transcript-api>=0.6.0"]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
langchain = ["langchain-core>=0.2.0", "pydantic>=2.0.0"]
all = ["fastmcp>=2.0.0", "langchain-core>=0.2.0", "pydantic>=2.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
mcp-youtube = "mcp_youtube.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_youtube"]

[tool.pytest.ini_options]
testpaths = ["tests"]
